cargo-features = ["profile-rustflags"]

[package]
name = "city-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
inspector = ["bevy-inspector-egui"]

[dependencies]
bevy-inspector-egui = { git = "https://github.com/jakobhellermann/bevy-inspector-egui", rev = "a181bdf", features = [ "highlight_changes" ], optional = true }
bevycheck = "0.5.2"
rand = "0.8.5"

[dependencies.bevy]
version = "0.12.1"
default-features = false
features = [
    "animation",
    "bevy_animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png",
    "ktx2",
    "zstd",
    "vorbis",
    "x11",
    "filesystem_watcher",
    "tonemapping_luts",
    "multi-threaded",
    "default_font"
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
test-case = "3.1.0"
